Fix Stream Shift non-ultra toggle alignment.

--- a/app/components-react/shared/StreamShiftToggle.m.less
+++ b/app/components-react/shared/StreamShiftToggle.m.less
@@ -17,6 +17,10 @@
 .label-checkbox {
   width: 100%;
   text-wrap: nowrap;
+
+  &.ultra {
+    align-self: baseline;
+  }
 }
 
 .tooltip {
@@ -26,4 +30,9 @@
 
 .beta-badge {
   margin-left: 10px;
+}
+
+.ultra-icon {
+  margin-right: 5px;
+  overflow: visible;
 }
